# StaticPipes-DataTig

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
staticpipesdatatig/pipes/: datatig_write_frictionless_output.py  datatig_write_staticsite_output.py  load_datatig.py
tests/: test_frictionless.py  test_site_1.py  test_site_2.py  test_staticsite.py
